@@ -24,6 +24,7 @@ Version 1.0.xxx (April xxth 2013)
 - Implemented: Raspberry Pi onboard temperature sensor
 - Fixed: Meter value dupplication checked now performed for actual day
 - Updated: Charts Library
+- Implemented: Option to delete data point from sensor by Shift-Left click on month/year graph point
 
 Version 1.0.412 (April 1th 2013)
 - Fixed: Siren icon on dashboard
